# Popingvini

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Languages/: Makefile  python.cpp  python.language-Popingvini
OS/: Makefile_Linux  Makefile_Windows
Resources/: icon.pxo
Resources/Images/Introduction/: P_studio.pxo  emotion0_1.pxo  emotion2_stay.pxo  emotion3_jump.pxo  emotion4_boom.pxo  studio_light.pxo  studios.pxo
Resources/Images/Loading/: loading_background.pxo
Resources/Images/Main_menu/: menu_background.pxo
Resources/Images/Person_menu/: person_menu_background.pxo
Resources/Images/Works_menu/: all.pxo
src/Code/includes/Classes/: button.h  image_button.h  language.h  learn.h  question.h  test.h  text_button.h  work.h  work_block.h
src/Code/includes/Singletone/: color_table.h  error_class.h  introduction.h  language_menu.h  learn_menu.h  loading.h  main_menu.h  names.h  pc_mouse.h  person_menu.h  test_menu.h  window_and_styles.h  works_menu.h
src/Code/src/Classes/: button.cpp  image_button.cpp  language.cpp  learn.cpp  question.cpp  test.cpp  text_button.cpp  work.cpp  work_block.cpp
src/Code/src/Singletone/: color_table.cpp  error_class.cpp  introduction.cpp  language_menu.cpp  learn_menu.cpp  loading.cpp  main.cpp  main_menu.cpp  names.cpp  pc_mouse.cpp  person_menu.cpp  test_menu.cpp  window_and_styles.cpp  works_menu.cpp
src/GetPixels/: GPI.h  GPI_Introduction.h  GPI_Language_menu.h  GPI_Learn_menu.h  GPI_Loading.h  GPI_Main_menu.h  GPI_Person_menu.h  GPI_Test_menu.h  GPI_Works_menu.h  GPS.h
